tests/paczka2/big_fuzzy/30096800.err
Error in line 1: jRpp A716 84,4
Error in line 5: jRpp S920 48,6
Error in line 8: RvWl8RCAJ A174 72,3
Error in line 9: A716 A716 51,6
Error in line 6: EYkUmk A174 58,6
Error in line 18: RCFHVqgp4 A716 15,16
Error in line 4: RCFHVqgp4 S369 63,4
Error in line 27: jDum A174 29,18
Error in line 33: jRpp S920 66,2
Error in line 42: jDum S920 15,30
Error in line 40: jRpp A174 52,5
Error in line 45: jRpp A716 40,9
Error in line 34: jDum A174 45,6
Error in line 48: jRpp A174 80,7
Error in line 73: jDum A716 22,0
Error in line 70: ZL23O2f A174 37,1
Error in line 79: EYkUmk S920 6,03
Error in line 77: A716 A174 51,8
Error in line 58: EYkUmk A716 36,7
Error in line 83: RCFHVqgp4 S369 6,2
Error in line 84: EYkUmk S920 26,0
Error in line 91: EYkUmk S369 50,3
Error in line 87: RCFHVqgp4 A716 10,7
Error in line 97: RCFHVqgp4 A174 40,6
Error in line 94: EYkUmk A174 49,8
Error in line 104: jDum A174 47,4
Error in line 107: RCFHVqgp4 A716 2,4
Error in line 108: RCFHVqgp4 A174 4,5
Error in line 112: RCFHVqgp4 A716 5,2
Error in line 114: A716 A716 80,8
Error in line 120: ZL23O2f A174 34,8
Error in line 136: RCFHVqgp4 A716 71,7
Error in line 145: RvWl8RCAJ S920 97,6
Error in line 150: RvWl8RCAJ A716 1xx,9
Error in line 137: RCFHVqgp4 S369 76,2
Error in line 154: A716 A716 22,6
Error in line 166: jRpp S369 47,3
Error in line 168: jRpp A716 55,9
Error in line 162: RvWl8RCAJ A716 26,6
Error in line 182: ZL23O2f A174 24,3
Error in line 191: jDum S369 68,9
Error in line 178: RvWl8RCAJ A716 93,5
Error in line 183: A716 A174 55,2
Error in line 197: EYkUmk A174 22,7
Error in line 199: ZL23O2f A174 9,3
Error in line 214: jDum S369 4,5
Error in line 219: EYkUmkxA716x46,9
Error in line 216: EYkUmk A174 56,5
Error in line 218: A716 A716 23,5
Error in line 240: jRpp S920 42,3
Error in line 245: RCFHVqgp4 A716 7,7
Error in line 249: RCFHVqgp4 S364 1,2
